update and delete specific application installed in the device
