# api/swagger/swagger.yaml
@@ -62,7 +62,7 @@ paths:
     x-swagger-router-controller: device
     get:
       description: Get device application information
-      operationId: getapp
+      operationId: getdevice
       parameters:
         - name: id
           type: string
@@ -101,12 +101,40 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /device/{id}/{app_id}:
+    x-swagger-router-controller: device
+  #   get:
+  #     description: Get device application information
+  #     operationId: getapp
+  #     parameters:
+  #       - name: id
+  #         type: string
+  #         in: path
+  #         required: true
+  #       - name: app_id
+  #         type: string
+  #         in: path
+  #         required: true
+  #     responses:
+  #       "200":
+  #         description: Success
+  #         schema:
+  #           $ref: "#/definitions/GetDeviceAppResponse"
+  #       default:
+  #         description: Error
+  #         schema:
+  #           $ref: "#/definitions/ErrorResponse"
     put:
       description: Update application in the device
       operationId: updateapp
       parameters:
         - name: id
           description: Device ID
+          type: string
+          in: path
+          required: true
+        - name: app_id
+          description: App ID
           type: string
           in: path
           required: true
@@ -130,6 +158,10 @@ paths:
       operationId: deleteapp
       parameters:
         - name: id
+          type: string
+          in: path
+          required: true
+        - name: app_id
           type: string
           in: path
           required: true
@@ -177,19 +209,30 @@ definitions:
               type: string
   GetDeviceAppResponse:
     required:
-      - app
+      - device
     properties:
-      app:
-        type: array
-        items:
-          type: object
+      device:
+        type: object
         properties:
-          id: 
+          id:
             type: string
-          name: 
+          location: 
             type: string
-          version: 
-            type: string 
+          device_type: 
+            type: array
+            items:
+              type: string
+          app:
+            type: array
+            items:
+              type: object
+            properties:
+              id: 
+                type: string
+              name: 
+                type: string
+              version: 
+                type: string 
   ErrorResponse:
     required:
       - message
@@ -211,7 +254,6 @@ definitions:
           type: string
         description: Device Type or Device Capability
     required:
-      - id
       - location
       - device_type
   Application:
@@ -229,6 +271,5 @@ definitions:
           type: string
           description: Application version
       required:
-        - id
         - name
         - version
